--- a/src/assets/views/user/login.html
+++ b/src/assets/views/user/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
-    <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/style.css"/>
     <title>User Login</title>
 </head>
