--- a/src/assets/views/user/profile.html
+++ b/src/assets/views/user/profile.html
@@ -4,7 +4,7 @@
     <!-- Meta tags for making website for mobile-->
     <meta charset="UTF-8">
     <title>User Profile</title>
-    <link href="../../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
