--- a/src/assets/views/user/register.html
+++ b/src/assets/views/user/register.html
@@ -9,11 +9,7 @@
 
   <meta charset="UTF-8">
   <title>User Register</title>
-  <link href="../../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-
-
-  <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
-
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="../../css/style.css" rel="stylesheet"/>
 </head>
 
