--- a/src/assets/views/widget/widget-choose.html
+++ b/src/assets/views/widget/widget-choose.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Choose Widget</title>
-    <link href="../../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
