--- a/src/assets/views/page/page-new.html
+++ b/src/assets/views/page/page-new.html
@@ -79,7 +79,7 @@
         </div>
 
         <div class="col-md-8">
-            <form class="form-group row">
+            <form class="form-group">
                 <label for="page-name"> Name </label>
                 <input class="form-control dk-lower-margin" id="page-name" placeholder="Page Name">
                 <label for="page-title"> Description </label>
