--- a/src/assets/views/website/website-edit.html
+++ b/src/assets/views/website/website-edit.html
@@ -70,7 +70,7 @@
             </ul>
         </div>
         <div class="col-md-8">
-            <form class="form-group row">
+            <form class="form-group">
                 <label for="website-name"> Name </label>
                 <input class="form-control dk-lower-margin" id="website-name" value="Lorem Ipsum">
                 <label for="website-desc"> Description </label>
