--- a/src/assets/views/website/website-new.html
+++ b/src/assets/views/website/website-new.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-fixed-top bg-primary">
+    <nav class="navbar navbar-fixed-top bg-primary col-xs-12">
         <div class="container-fluid hidden-xs hidden-sm col-md-4">
             <a href="../user/profile.html" class="navbar-brand bg-primary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
@@ -32,51 +32,51 @@
         </div>
     </nav>
     <div class="dk-fixed-bottom-navbar-padding dk-fixed-top-navbar-padding">
-    <div class="col-md-4 hidden-xs hidden-sm">
-        <ul class="list-group">
-            <li class="list-group-item text-primary dk-borderless">
-                <div class="row dk-li-right-margin">
-                    <a href="../page/page-list.html"> Address Book App </a>
-                    <a href="website-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
-            </li>
-            <li class="list-group-item text-primary dk-borderless">
-                <div class="row dk-li-right-margin">
-                    <a href="../page/page-list.html"> Blogger </a>
-                    <a href="website-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
-            </li>
-            <li class="list-group-item text-primary dk-borderless">
-                <div class="row dk-li-right-margin">
-                    <a href="../page/page-list.html"> Blogging App </a>
-                    <a href="website-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
-            </li>
-            <li class="list-group-item text-primary dk-borderless">
-                <div class="row dk-li-right-margin">
-                    <a href="../page/page-list.html"> Script Testing App </a>
-                    <a href="website-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
-            </li>
-        </ul>
-    </div>
-    <div class="col-md-8">
-        <form class="form-group row">
-            <label for="website-name"> Name </label>
-            <input class="form-control dk-lower-margin" id="website-name" placeholder="Name of the website">
-            <label for="website-desc"> Description </label>
-            <textarea class="form-control dk-fixed-width dk-lower-margin" rows="3" id="website-desc"
-                      placeholder="Some description about your website"></textarea>
-        </form>
-    </div>
+        <div class="col-md-4 hidden-xs hidden-sm">
+            <ul class="list-group">
+                <li class="list-group-item text-primary dk-borderless">
+                    <div class="row dk-li-right-margin">
+                        <a href="../page/page-list.html"> Address Book App </a>
+                        <a href="website-edit.html">
+                            <span class="pull-right glyphicon glyphicon-cog"></span>
+                        </a>
+                    </div>
+                </li>
+                <li class="list-group-item text-primary dk-borderless">
+                    <div class="row dk-li-right-margin">
+                        <a href="../page/page-list.html"> Blogger </a>
+                        <a href="website-edit.html">
+                            <span class="pull-right glyphicon glyphicon-cog"></span>
+                        </a>
+                    </div>
+                </li>
+                <li class="list-group-item text-primary dk-borderless">
+                    <div class="row dk-li-right-margin">
+                        <a href="../page/page-list.html"> Blogging App </a>
+                        <a href="website-edit.html">
+                            <span class="pull-right glyphicon glyphicon-cog"></span>
+                        </a>
+                    </div>
+                </li>
+                <li class="list-group-item text-primary dk-borderless">
+                    <div class="row dk-li-right-margin">
+                        <a href="../page/page-list.html"> Script Testing App </a>
+                        <a href="website-edit.html">
+                            <span class="pull-right glyphicon glyphicon-cog"></span>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-8">
+            <form class="form-group">
+                <label for="website-name"> Name </label>
+                <input class="form-control dk-lower-margin" id="website-name" placeholder="Name of the website">
+                <label for="website-desc"> Description </label>
+                <textarea class="form-control dk-fixed-width dk-lower-margin" rows="3" id="website-desc"
+                          placeholder="Some description about your website"></textarea>
+            </form>
+        </div>
     </div>
     <nav class="navbar navbar-fixed-bottom bg-primary">
         <div class="container-fluid col-xs-1 col-xs-offset-11">
